# reachy-brain

./: .env.example  .gitignore  QUICKSTART.md  README.md  SKILL.md  animations.py  audio.py  audio_server.py  camera.py  camera_server.py  config.example.json  connect.sh  demo.sh  deploy_talk.sh  enroll_face.py  face_registry.py  install.sh  known_ips.env.example  main.py  memory.py  pyproject.toml  relay_server.py  requirements.txt  run_talk.sh  setup.sh  sleep.sh  start_all.sh  talk.py  talk_wireless.py  tools.py  vision.py  voice_loop.py  wake.sh  wireless_voice.py
bridge/: deploy.sh  play_audio.py  reachy_bridge.py  test_voice_loop.py  voice_loop.py
pollen_app/: .env.example  deploy_to_robot.sh  pyproject.toml
pollen_app/src/reachy_mini_conversation_app/: .env.example  clawdbot_handler.py  face_identity_manager.py  face_registry.py  http_camera.py  main.py  moves.py  utils.py
pollen_app/src/reachy_mini_conversation_app/profiles/kayacan/: __init__.py  instructions.txt  tools.txt
pollen_app/src/reachy_mini_conversation_app/tools/: core_tools.py  face_identity_tool.py  honcho_recall.py  honcho_remember.py
pollen_app/src/reachy_mini_conversation_app/vision/: __init__.py
reachy_agent/: __init__.py  agent.py  audio.py  bridge_audio.py  clawdbot.py  config.py  memory.py  openai_realtime.py  robot.py  stt.py  tts.py  vision.py
scripts/: config.py  honcho_memory.py  reachy.py  train_wake_word.py  voice_loop.py  wake_word.py
